plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.gjf.java'
version = '0.0.1-SNAPSHOT'
description = 'mcpDemoJava'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    maven {
        url = uri('https://maven.aliyun.com/repository/public')
    }
    mavenCentral()

}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // MCP 核心依赖
//    implementation 'io.modelcontextprotocol:mcp-client:1.0.0'
//    implementation 'io.modelcontextprotocol:mcp-spec:1.0.0'
//    implementation 'io.modelcontextprotocol:mcp-transport-sse:1.0.0'

    // JSON 解析
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

    // 响应式编程
    implementation 'io.projectreactor:reactor-core:3.5.9'

    // 大模型 SDK（示例）
//    implementation 'com.openai:openai-client:0.27.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
